[package]
name = "chain-strg-lithium"
version = "0.1.0"
edition = "2024"

[dependencies]
# Peer 2 Peer
libp2p = {version="0.56.0", features=["full"]}
tokio = {version="1.48.0", features=["full"]}

# Serialization
serde = {version="1.0.0", features=["derive"]}

# Logging
log = "0.4.0"
pretty_env_logger = "0.5.0"